--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/checkbox": "^0.5.12",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
@@ -18,6 +19,7 @@
     "babel-plugin-react-native-stylename-to-style": "^0.13.0",
     "react": "18.1.0",
     "react-native": "0.70.1",
+    "react-native-calendars": "^1.1289.0",
     "react-native-css-transformer": "^1.2.4",
     "react-native-safe-area-context": "^4.3.4",
     "react-native-screens": "^3.17.0",
