--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-css-transformer": "^1.2.4",
     "react-native-safe-area-context": "^4.3.4",
     "react-native-screens": "^3.17.0",
+    "react-native-simple-time-picker": "^1.3.11",
     "react-navigation": "^4.4.4"
   },
   "devDependencies": {
