--- a/app.json
+++ b/app.json
@@ -1,11 +1,4 @@
 {
   "name": "NativeFrontend",
-  "displayName": "NativeFrontend",
-
-  "expo": {
-    "packagerOpts": {
-      "config": "metro.config.js",
-      "sourceExts": ["js", "jsx", "css"]
-    }
-  }
+  "displayName": "NativeFrontend"
 }
