--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   "dependencies": {
     "@react-native-community/checkbox": "^0.5.12",
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.0",
     "babel-plugin-react-native-platform-specific-extensions": "^1.1.1",
@@ -21,10 +20,10 @@
     "react-native": "0.70.1",
     "react-native-calendars": "^1.1289.0",
     "react-native-css-transformer": "^1.2.4",
-    "react-native-safe-area-context": "^4.3.4",
-    "react-native-screens": "^3.17.0",
-    "react-native-simple-time-picker": "^1.3.11",
-    "react-navigation": "^4.4.4"
+    "react-native-gesture-handler": "^2.6.2",
+    "react-native-reanimated": "^2.10.0",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "^3.17.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
