--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "react-native": "0.70.1",
     "react-native-calendars": "^1.1289.0",
     "react-native-css-transformer": "^1.2.4",
+    "react-native-document-picker": "^8.1.1",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.6.2",
     "react-native-reanimated": "^2.10.0",
     "react-native-safe-area-context": "^4.4.1",
